fix: Issue with scrolling on mobile devices.

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -7,12 +7,6 @@
   padding: 0;
 }
 
-@media (max-width: 1550px) {
-  .p_home {
-    height: calc(100vh - 180px);
-  }
-}
-
 .right_site {
   width: calc(50% + 170px);
   float: right;
