--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,8 +1,4 @@
 
-.p_home{
-  height: calc(100vh - 250px);
-}
-
 h5 {
   color: black;
 }
