--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,9 +1,5 @@
 
 
-.p_home{
-  height: calc(100vh - 250px);
-}
-
 .achievements_timeline li {
   margin-bottom: 10px;
   background: #fafafa;
